removed the post from api
